fix phone overflow to the next line on a menu

--- a/css/site.css
+++ b/css/site.css
@@ -236,6 +236,10 @@ footer .glyphicon {
     .logo { font-size: 150px; }
 }
 
+#phoneBrand {
+    font-size: small;
+}
+
 .floatButton {
     background: none;
     background-color: #f4511e;
